fixing the word wrap issue

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ h1{
   padding: 6px 0 0 5px;
   color: white;
 }
+.out{
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
 #container{
   width: 300px;
   margin-left: auto;
@@ -21,12 +26,15 @@ h1{
   background: #d7acd4;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12),
             0 2px 4px 0 rgba(0,0,0,0.08);
+  display: inline-block;
+  word-wrap: break-word;
 }
 .code{
   background-color: #f2f2b0;
   margin-bottom: 2px;
   padding: 0 0 0 4px ;
 }
+
 textarea{
   width: 298px;
   overflow: hidden;
@@ -34,7 +42,7 @@ textarea{
   border: 0px;
   background: transparent;
   color: white;
-  padding: 0 0 0 4px ;
+  padding: 0 0 0 4px;
 }
 textarea:focus{
   outline: none;
